<resources>
    <string name="app_name">OPSC7312_Flappr</string>
    <string name="login">Login</string>
    <string name="below_login">Sign in to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Log in</string>
    <string name="register">Create New Account</string>
    <string name="non_clickable_text_r">Already Registered?</string>
    <string name="clickable_text_r">Log in here.</string>
    <string name="register_button">Sign in</string>
    <string name="name">Name</string>
    <string name="name_text">Adam van Staden</string>
    <string name="email_text">hello@reallygreatsite.com</string>
    <string name="password_text">************</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="view_profile_text">View profile</string>
    <string name="chng_password_upper">Change Password</string>
    <string name="chng_password_lower">change password</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM NEW PASSWORD</string>

    <string name="menu_home">Home</string>
    <string name="menu_sightings">View My Sightings</string>
    <string name="menu_profile">View My Profile</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic3QxMDA4MTk2NiIsImEiOiJjbG5xM2Q1bWowaXFpMmluejV5ZGV1c3d4In0.vi7bgR6w9pzhBOkGBsWebQ</string>

    <string name="default_max_dis">1</string>
    <string name="back">Back</string>
    <string name="unit_pref">Unit Preference</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="max_dis">Max Distance</string>
    <string name="km">Kilometres</string>
    <string name="miles">Miles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>