<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    tools:context=".Login">

    <com.example.opsc7312_flappr.CircImageView
        android:id="@+id/ivLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/flappr_logo_colour" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/text_purple" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/below_login"
        android:textSize="22sp"
        android:textColor="@color/text_pink" />

    <!-- Email field -->
    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitleText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:text="@string/email"
        android:textSize="22sp"
        android:textColor="@color/text_orange" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/emailTitle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/tb_grey"
        android:inputType="textEmailAddress"
        android:hint="   hello@reallygreatsite.com"
        android:textColorHint="@color/text_orange" />

    <!-- Password field -->
    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="22sp"
        android:textColor="@color/text_orange" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/passwordTitle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/tb_grey"
        android:inputType="textPassword"
        android:hint="   ****************"
        android:textColorHint="@color/text_orange" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        app:cornerRadius="20dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:stateListAnimator="@null"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:textSize="24dp"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:onClick="redirectToNavigationDrawer"
        />

    <Button
        android:id="@+id/btnGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register" />

</RelativeLayout>